# dep-health-scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  depscan.py  pyproject.toml  updated_architecture_diagram.html
.github/workflows/: ci.yml  release.yml  reusable-quality.yml
config/: .env.example
src/: cache.rs  dependency.rs  error.rs  lib.rs  lockfile.rs  main.rs  reporter.rs  scanner.rs
src/dep_health_scanner/: __init__.py  cache.py  cli.py  lockfile.py  models.py  reporter.py  scanner.py
tests/: test_lockfile.py  test_smoke.py  test_update.py
