[package]
name = "dep-health-scanner"
version = "0.1.0"
edition = "2021"
authors = ["Billy"]
description = "Fast, opinionated CLI for dependency health and supply chain scanning"
license = "MIT"
repository = ""

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = { version = "0.17", features = ["rayon"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies"] }

# Async
tokio = { version = "1.43", features = ["full"] }
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Caching
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"

# Utilities
glob = "0.3"
memmap2 = "0.9"
bloomfilter = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5"
mockito = "1.6"
tempfile = "3.14"
pretty_assertions = "1.4"

[[bin]]
name = "depscan"
path = "src/main.rs"
